# aima-cpp

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindLog4cplus.cmake  FindSQLite3.cmake  HunterGate.cmake  aima.cpp.in  aima_helpers.cmake  version.cpp.in
src/: CMakeLists.txt  core.cmake  integrated.cmake  vacuum.cmake  version.hpp
src/PathFinder/: AStarAgent.cpp  AStarAgent.hpp  CMakeLists.txt  CollapsibleSearchNode.hpp  IterativeDeepeningAgent.cpp  IterativeDeepeningAgent.hpp  LineSegment.cpp  LineSegment.hpp  PathFinderAgent.cpp  PathFinderAgent.hpp  PathFinderEnvironment.cpp  PathFinderEnvironment.hpp  PathFinderGui.cpp  PathFinderGui.hpp  PathFinderPercept.cpp  PathFinderPercept.hpp  Point.cpp  Point.hpp  Polygon.cpp  Polygon.hpp  RecursiveBestFirstAgent.cpp  RecursiveBestFirstAgent.hpp  SearchNode.hpp  geometry.cpp  geometry.hpp
src/TravelingSalesman/: CMakeLists.txt  IterativeLengtheningAgent.cpp  IterativeLengtheningAgent.hpp  SearchNode.hpp  TravelingSalesmanEnvironment.cpp  TravelingSalesmanEnvironment.hpp  TravelingSalesmanGui.cpp  TravelingSalesmanGui.hpp  TravelingSalesmanPercept.cpp  TravelingSalesmanPercept.hpp
src/apps/: PathFinderApp.cpp  PathFinderApp.hpp  RandomnessVacuumApp.cpp  RandomnessVacuumApp.hpp  SearchVacuumApp.cpp  SearchVacuumApp.hpp  StatefulVacuumApp.cpp  StatefulVacuumApp.hpp  TravelingSalesmanApp.cpp  TravelingSalesmanApp.hpp  TrivialVacuumApp.cpp  TrivialVacuumApp.hpp
src/core/: Action.cpp  Action.hpp  Agent.hpp  AgentPicker.cpp  AgentPicker.hpp  App.cpp  App.hpp  AppPtr.cpp  AppPtr.hpp  AppRegistryEntry.cpp  AppRegistryEntry.hpp  Demo.cpp  Demo.hpp  DemoRegistryEntry.cpp  DemoRegistryEntry.hpp  Environment.cpp  Environment.hpp  EnvironmentDestroyedView.hpp  EnvironmentObject.hpp  EnvironmentView.hpp  Exception.hpp  Percept.hpp  registerAgent.hpp  registerApp.hpp  registerDemo.hpp
src/demos/: PathFinderDemo.cpp  PathFinderDemo.hpp  StatefulVacuumDemo.cpp  StatefulVacuumDemo.hpp  TrivialVacuumDemo.cpp  TrivialVacuumDemo.hpp
src/gui/: ImGuiWrapper.cpp  ImGuiWrapper.hpp  Image.cpp  Image.hpp  OutputConsoleWidget.cpp  OutputConsoleWidget.hpp  imgui_config.hpp  standAloneApp.hpp
src/integrated/: AppRegistry.cpp  AppRegistry.hpp  CMakeLists.txt  DemoRegistry.cpp  DemoRegistry.hpp  DemoRegistryEntry.cpp  DemoRegistryEntry.hpp  IntegratedDemo.cpp  IntegratedDemo.hpp  IntegratedRunner.cpp  IntegratedRunner.hpp  forward.hpp  main.cpp
src/util/: App.hpp  AssetManager.cpp  AssetManager.hpp  AttributesMixin.hpp  CancellationToken.hpp  Container.hpp  Finally.hpp  PrintableMixin.hpp  StringBuilder.hpp  ThreadSafeWrapper.cpp  ThreadSafeWrapper.hpp  TypeErasedContainer.cpp  TypeErasedContainer.hpp  UniqueIdMixin.hpp  configure_logging.cpp  configure_logging.hpp  define_logger.hpp  parseTitle.cpp  parseTitle.hpp  random_string.cpp  random_string.hpp  type_traits.hpp
src/util/asset_manager/: AssetHandle.cpp  AssetHandle.hpp  AssetManagerException.hpp  DataAccessLayer.cpp  DataAccessLayer.hpp  TypeErasedContainer.cpp  TypeErasedContainer.hpp
src/util/geometry/: LineSegment.cpp  LineSegment.hpp  Point.cpp  Point.hpp  Polygon.cpp  Polygon.hpp  geometry.cpp  geometry.hpp
src/vacuum/: BasicVacuumAgent.cpp  BasicVacuumAgent.hpp  BasicVacuumEnvironment.cpp  BasicVacuumEnvironment.hpp  CMakeLists.txt  GlobalVacuumEnvironmentPercept.cpp  GlobalVacuumEnvironmentPercept.hpp  IterativeLengtheningAgent.cpp  IterativeLengtheningAgent.hpp  LocalVacuumEnvironmentPercept.cpp  LocalVacuumEnvironmentPercept.hpp  RandomnessBasedAgent.cpp  RandomnessBasedAgent.hpp  SearchBasedAgent.cpp  SearchBasedAgent.hpp  StatefulVacuumAgent.cpp  StatefulVacuumAgent.hpp  TrivialVacuumApp.cpp  TrivialVacuumApp.hpp  VacuumGui.cpp  VacuumGui.hpp  VisibleVacuumEnvironment.cpp  VisibleVacuumEnvironment.hpp  misc.cpp  misc.hpp  operators.cpp  stateful_vacuum_demo.cpp  stateful_vacuum_demo.hpp  trivial_vacuum_demo.cpp  trivial_vacuum_demo.hpp  types.hpp
src/viewers/: GraphicViewer.cpp  GraphicViewer.hpp  SimpleViewer.cpp  SimpleViewer.hpp
src/views/: GraphicViewer.cpp  GraphicViewer.hpp  SimpleViewer.cpp  SimpleViewer.hpp
test/: CMakeLists.txt  main.cpp
test/src/PathFinder/: geometry.cpp
test/src/util/: AssetManager.cpp
